--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -52,7 +52,7 @@
         <div class="content">
             <div class="column col-left reveal">
                 <div class="img-card" data-aos="fade-right" data-aos-duration="2000" data-aos-delay="200">
-                    <img src="Image/img1.jpg
+                    <img src="Image/jp10.jpg
                     " alt="">
                 </div>
             </div>
